feat: updated package

--- a/example/android/local.properties
+++ b/example/android/local.properties
@@ -1,2 +1,2 @@
 sdk.dir=/Users/ketanchoyal/Library/Android/sdk
-flutter.sdk=/Users/ketanchoyal/fvm/versions/stable
+flutter.sdk=/Users/ketanchoyal/.puro/envs/stable/flutter
