--- a/example/ios/Flutter/Generated.xcconfig
+++ b/example/ios/Flutter/Generated.xcconfig
@@ -1,14 +1,14 @@
 // This is a generated file; do not edit or check into version control.
 FLUTTER_ROOT=/Users/ketanchoyal/fvm/versions/stable
-FLUTTER_APPLICATION_PATH=/Users/ketanchoyal/Desktop/Programming.nosync/Flutter.nosync/Packages/flutter-plugins/packages/health/example
+FLUTTER_APPLICATION_PATH=/Users/ketanchoyal/Desktop/Programming.nosync/Flutter.nosync/Complex Projects/calorie_tracker/packages/health/example
 COCOAPODS_PARALLEL_CODE_SIGN=true
-FLUTTER_TARGET=/Users/ketanchoyal/Desktop/Programming.nosync/Flutter.nosync/Packages/flutter-plugins/packages/health/example/lib/main.dart
+FLUTTER_TARGET=lib/main.dart
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=4.0.0
 FLUTTER_BUILD_NUMBER=4.0.0
 EXCLUDED_ARCHS[sdk=iphonesimulator*]=i386
-DART_DEFINES=RkxVVFRFUl9XRUJfQVVUT19ERVRFQ1Q9dHJ1ZQ==
+EXCLUDED_ARCHS[sdk=iphoneos*]=armv7
 DART_OBFUSCATION=false
 TRACK_WIDGET_CREATION=true
 TREE_SHAKE_ICONS=false
-PACKAGE_CONFIG=/Users/ketanchoyal/Desktop/Programming.nosync/Flutter.nosync/Packages/flutter-plugins/packages/health/example/.dart_tool/package_config.json
+PACKAGE_CONFIG=.dart_tool/package_config.json
