--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,14 +4,13 @@ version: 4.1.0
 homepage: https://github.com/ketanchoyal/health
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
-  flutter: ">=3.0.0"
+  sdk: ">=3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.17.0
-  device_info_plus: ^8.0.0
+  intl: ^0.18.1
+  device_info_plus: ^9.0.0
 
 dev_dependencies:
   flutter_test:
